srt: Autospec creation for update from version 1.5.2 to version 1.5.3
Aaron Jencks (1):
      [core] Add volatile keyword to asm block in rdtsc (#2759).

Guangqing Chen (3):
      [core] Fixed srctime from closing socket was mistakenly cleared
      [core] fix tsbpd() may deadlock with processCtrlShutdown()
      [core] Slightly optimize the RCV drop by message number (#2686).

Jose Santiago (1):
      [apps] Fix the build for target without IP_ADD_SOURCE_MEMBERSHIP (#2779).

Maxim Sharabayko (12):
      [core] Use overlapped WSASendTo to avoid loss in UDP sending (#2632).
      [core] Fixed group read-ready epoll events.
      [core] Removed unused CUDTGroup::m_Positions.
      [core] Perf improvement of group reading.
      [core] Fixed RCV buffer initialization in Rendezvous.
      [core] Refactor CRcvQueue::storePkt(..) for better resource management (#2775).
      [core] Minor code clean up in CRateEstimator.
      [core] Initialize ISN and PeerISN in CUDT.
      [core] Drop unencrypted packets in GCM mode.
      [core] Added maximum BW limit for retransmissions (#2714).
      [API] SRT version raised to 1.5.3.
      [core] Fixed SRT_ATTR_REQUIRES use.

Mikołaj Małecki (1):
      [core] Fix: In rendezvous when processing resulted in ACCEPT it was still sending rejection

Sektor van Skijlen (5):
      [core] Fixed unhandled error in haicrypt (#2685).
      [docs] Updating the explicit information for binding to IPv6 wildcard (#2765).
      [tests] Added custom main with transparent parameters for tests (#2681).
      [core] Rejection not undertaken in rendezvous after KMX failure (#2692).
      [apps] Fixed conditional IP_ADD_SOURCE_MEMBERSHIP in testmedia (#2780).

Steve Lhomme (1):
      [build] Fix downversioning of _WIN32_WINNT (#2754).

Thierry Lelegard (2):
      [build] Added missing public header files in Windows binary installer (#2784).
      [docs] Fixed API doc: SRT_INVALID_SOCK instead of SRT_ERROR in str_accept (#2785).

john (1):
      [core] Fix 

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = srt
-url = https://github.com/Haivision/srt/archive/refs/tags/v1.5.2.tar.gz
+url = https://github.com/Haivision/srt/archive/v1.5.3/srt-1.5.3.tar.gz
 archives = 
 giturl = https://github.com/Haivision/srt.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
